--- a/src/app/components/user-interface/habilidadesmod/crear-habilidadesmod/crear-habilidadesmod.component.css
+++ b/src/app/components/user-interface/habilidadesmod/crear-habilidadesmod/crear-habilidadesmod.component.css
@@ -1,11 +1,23 @@
+.container {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Formulario de edicion */
 
 .formulario-edicion {
   padding: 20px;
-  margin: 10px auto;
-  background-color: var(--shadow-3);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  background-color: var(--shadow-6);
   border-radius: 5px;
-  width: 90%;
+  width: 80%;
+  box-shadow: 4px 4px 8px 2px var(--shadow-6), 0 4px 30px var(--shadow-1);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 }
 
 .mod-form-div {
