--- a/src/app/components/user-interface/heromod/editar-heromod/editar-heromod.component.css
+++ b/src/app/components/user-interface/heromod/editar-heromod/editar-heromod.component.css
@@ -16,6 +16,9 @@
   min-width: 300px;
   max-width: 1000px;
   color: var(--almost-white);
+  box-shadow: 4px 4px 8px 2px var(--shadow-6), 0 4px 30px var(--shadow-1);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 }
 
 .mod-form-div {
