--- a/src/app/components/login/logform/logform.component.css
+++ b/src/app/components/login/logform/logform.component.css
@@ -90,10 +90,19 @@ input[type="submit"]:hover {
 /* Para cuando los campos tienen errores */
 
 .error {
-  padding: 5px 0;
-  font-weight: bold;
-  color: rgb(211, 0, 0);
-  background-color: rgb(255, 210, 210);
+  padding: 2px 0;
+  font-weight: 300;
+  color: rgb(255, 103, 103);
+  background-color: var(--shadow-6);
+  /* border: 1px solid #333; */
+  border-radius: 5px;
+}
+
+.correct {
+  padding: 2px 0;
+  font-weight: 300;
+  color: rgb(79, 255, 79);
+  background-color: var(--shadow-6);
   /* border: 1px solid #333; */
   border-radius: 5px;
 }
