--- a/src/app/components/sign-up/sign-upform/sign-upform.component.html
+++ b/src/app/components/sign-up/sign-upform/sign-upform.component.html
@@ -1,25 +1,19 @@
 
-
 <!-- signUp Form -->
 <section class="login row">
   <div class="container login-principal seccion-glass col-10 col-sm-8 col-md-6 col-lg-4 d-flex flex-column justify-content-center align-items-center">
     <h1> Sign Up </h1>
     <p>Enter your credentials to create a new account.</p>
-    <form action="" autocomplete="off">
-      <!-- User name -->
-      <div class="container d-flex flex-column text-start">
-        <label for="username">User Name</label>
-        <input id="username" type="text" placeholder="My_username">
-      </div>
+    <form [formGroup]="form" autocomplete="off" (ngSubmit)="onSubmitRegister()">
       <!-- User email -->
       <div class="container d-flex flex-column text-start">
         <label for="useremail">Email Address</label>
-        <input id="useremail" type="email" placeholder="myemail@something.com">
+        <input id="useremail" type="email" formControlName="email" placeholder="myemail@something.com">
       </div>
       <!-- Password -->
       <div class="container d-flex flex-column text-start">
         <label for="password">New Password</label>
-        <input id="password" type="password" placeholder="your password">
+        <input id="password" type="password" formControlName="password" placeholder="your password">
       </div>
       <!-- Login button -->
       <div class="container d-flex flex-column justify-content-center align-items-center">
