--- a/src/app/components/user-interface/navbarmod/navbarmod.component.html
+++ b/src/app/components/user-interface/navbarmod/navbarmod.component.html
@@ -38,11 +38,11 @@
                     <a routerLink="/login" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-pen"></i>Modo Edicion</a>
                   </li> -->
                   
-                  <li>
+                  <!-- <li>
                     <a aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-check"></i>Presentacion</a>
-                  </li>
+                  </li> -->
                   <li>
-                    <a routerLink="/inicio" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-arrow-right-to-bracket"></i>Cerrar sesion</a>
+                    <a (click)="onSignOut()" aria-current="page" class="dropdown-item seccion-glass-h"><i class="fa-solid fa-arrow-right-from-bracket"></i>Cerrar sesion</a>
                   </li>
                   
                 </ul>
